# jy-scribe

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
claude-code/: transcribe.md
jy_scribe/: __init__.py  align.py  audio.py  cli.py  diarize.py  transcribe.py  vtt.py
tests/: test_align.py  test_audio.py  test_cli.py  test_diarize.py  test_transcribe.py  test_vtt.py
